hangul/hangul.h

/* hangulctype.c */
enum {
    HANGUL_CHOSEONG_FILLER  = 0x115f,   /* hangul choseong filler */
    HANGUL_JUNGSEONG_FILLER = 0x1160    /* hangul jungseong filler */
};
typedef uint32_t ucschar;
bool hangul_is_choseong(ucschar c);
bool hangul_is_jungseong(ucschar c);
bool hangul_is_jongseong(ucschar c);
bool hangul_is_choseong_conjoinable(ucschar c);
bool hangul_is_jungseong_conjoinable(ucschar c);
bool hangul_is_jongseong_conjoinable(ucschar c);
bool hangul_is_jamo_conjoinable(ucschar c);
bool hangul_is_syllable(ucschar c);
bool hangul_is_jamo(ucschar c);
bool hangul_is_cjamo(ucschar c);
ucschar hangul_jamo_to_cjamo(ucschar ch);
const ucschar* hangul_syllable_iterator_prev(const ucschar* str,
					     const ucschar* begin);
const ucschar* hangul_syllable_iterator_next(const ucschar* str,
					     const ucschar* end);
int     hangul_syllable_len(const ucschar* str, int max_len);
ucschar hangul_jamo_to_syllable(ucschar choseong,
				ucschar jungseong,
				ucschar jongseong);
void    hangul_syllable_to_jamo(ucschar syllable,
				ucschar* choseong,
				ucschar* jungseong,
				ucschar* jongseong);
int     hangul_jamos_to_syllables(ucschar* dest, int destlen,
				  const ucschar* src, int srclen);
/* hangulinputcontext.c */
typedef struct _HangulKeyboard        HangulKeyboard;
typedef struct _HangulCombination     HangulCombination;
typedef struct _HangulBuffer          HangulBuffer;
typedef struct _HangulInputContext    HangulInputContext;
enum {
    HANGUL_OUTPUT_SYLLABLE,
    HANGUL_OUTPUT_JAMO
};
enum {
    HANGUL_KEYBOARD_TYPE_JAMO,
    HANGUL_KEYBOARD_TYPE_JASO,
    // 3beol
    HANGUL_KEYBOARD_TYPE_3FINALSUN,
	HANGUL_KEYBOARD_TYPE_JASO_SHIN,
    HANGUL_KEYBOARD_TYPE_JASO_SHIN_SHIFT,
    HANGUL_KEYBOARD_TYPE_JASO_SHIN_YET,
    HANGUL_KEYBOARD_TYPE_ROMAJA,
    HANGUL_KEYBOARD_TYPE_JAMO_YET,
    HANGUL_KEYBOARD_TYPE_JASO_YET,
};
enum {
    HANGUL_IC_OPTION_AUTO_REORDER,
    HANGUL_IC_OPTION_COMBI_ON_DOUBLE_STROKE,
    HANGUL_IC_OPTION_NON_CHOSEONG_COMBI,
    // 3beol
	HANGUL_IC_OPTION_EXTENDED_LAYOUT,
	HANGUL_IC_OPTION_EXTENDED_LAYOUT_INDEX,
	HANGUL_IC_OPTION_EXTENDED_LAYOUT_PREVKey,
	HANGUL_IC_OPTION_GALMADEULI_METHOD,
    HANGUL_IC_OPTION_EXTENDED_LAYOUT_STEP,
};
/* keyboard */
HangulKeyboard* hangul_keyboard_new(void);
HangulKeyboard* hangul_keyboard_new_from_file(const char* path);
void    hangul_keyboard_delete(HangulKeyboard *keyboard);
void    hangul_keyboard_set_type(HangulKeyboard *keyboard, int type);
unsigned int hangul_keyboard_list_get_count();
const char* hangul_keyboard_list_get_keyboard_id(unsigned index_);
const char* hangul_keyboard_list_get_keyboard_name(unsigned index_);
const HangulKeyboard* hangul_keyboard_list_get_keyboard(const char* id);
const char* hangul_keyboard_list_register_keyboard(HangulKeyboard* keyboard);
HangulKeyboard* hangul_keyboard_list_unregister_keyboard(const char* id);
/* combination */
HangulCombination* hangul_combination_new(void);
void hangul_combination_delete(HangulCombination *combination);
bool hangul_combination_set_data(HangulCombination* combination, 
		     ucschar* first, ucschar* second, ucschar* result, unsigned int n);
/* input context */
HangulInputContext* hangul_ic_new(const char* keyboard);
void hangul_ic_delete(HangulInputContext *hic);
bool hangul_ic_process(HangulInputContext *hic, int ascii);
void hangul_ic_reset(HangulInputContext *hic);
bool hangul_ic_backspace(HangulInputContext *hic);
bool hangul_ic_is_empty(HangulInputContext *hic);
bool hangul_ic_has_choseong(HangulInputContext *hic);
bool hangul_ic_has_jungseong(HangulInputContext *hic);
bool hangul_ic_has_jongseong(HangulInputContext *hic);
bool hangul_ic_is_transliteration(HangulInputContext *hic);
bool hangul_ic_get_option(HangulInputContext *hic, int option);
void hangul_ic_set_option(HangulInputContext *hic, int option, bool value);
void hangul_ic_set_output_mode(HangulInputContext *hic, int mode);
void hangul_ic_set_keyboard(HangulInputContext *hic,
			    const HangulKeyboard *keyboard);
void hangul_ic_switch_keyboard_table(HangulInputContext* hic, int tableid);
void hangul_ic_select_keyboard(HangulInputContext *hic,
			       const char* id);
void hangul_ic_connect_callback(HangulInputContext* hic, const char* event,
				void* callback, void* user_data);
const ucschar* hangul_ic_get_preedit_string(HangulInputContext *hic);
const ucschar* hangul_ic_get_commit_string(HangulInputContext *hic);
const ucschar* hangul_ic_flush(HangulInputContext *hic);
/* hanja.c */
typedef struct _Hanja Hanja;
typedef struct _HanjaList HanjaList;
typedef struct _HanjaTable HanjaTable;
HanjaTable*  hanja_table_load(const char *filename);
HanjaList*   hanja_table_match_exact(const HanjaTable* table, const char *key);