bindings/rust/src/hangul.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _Mbstatet"][::std::mem::size_of::<_Mbstatet>() - 8usize];
    ["Alignment of _Mbstatet"][::std::mem::align_of::<_Mbstatet>() - 4usize];
    ["Offset of field: _Mbstatet::_Wchar"][::std::mem::offset_of!(_Mbstatet, _Wchar) - 0usize];
    ["Offset of field: _Mbstatet::_Byte"][::std::mem::offset_of!(_Mbstatet, _Byte) - 4usize];
    ["Offset of field: _Mbstatet::_State"][::std::mem::offset_of!(_Mbstatet, _State) - 6usize];
};
pub type mbstate_t = _Mbstatet;
pub type time_t = __time64_t;
pub type rsize_t = usize;
pub type int_least8_t = ::std::os::raw::c_schar;
pub type int_least16_t = ::std::os::raw::c_short;
pub type int_least32_t = ::std::os::raw::c_int;
pub type int_least64_t = ::std::os::raw::c_longlong;
pub type uint_least8_t = ::std::os::raw::c_uchar;
pub type uint_least16_t = ::std::os::raw::c_ushort;
pub type uint_least32_t = ::std::os::raw::c_uint;
pub type uint_least64_t = ::std::os::raw::c_ulonglong;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_int;
pub type int_fast32_t = ::std::os::raw::c_int;
pub type int_fast64_t = ::std::os::raw::c_longlong;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_uint;
pub type uint_fast32_t = ::std::os::raw::c_uint;
pub type uint_fast64_t = ::std::os::raw::c_ulonglong;
pub type intmax_t = ::std::os::raw::c_longlong;
pub type uintmax_t = ::std::os::raw::c_ulonglong;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Lldiv_t {
    pub quot: intmax_t,
    pub rem: intmax_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _Lldiv_t"][::std::mem::size_of::<_Lldiv_t>() - 16usize];
    ["Alignment of _Lldiv_t"][::std::mem::align_of::<_Lldiv_t>() - 8usize];
    ["Offset of field: _Lldiv_t::quot"][::std::mem::offset_of!(_Lldiv_t, quot) - 0usize];
    ["Offset of field: _Lldiv_t::rem"][::std::mem::offset_of!(_Lldiv_t, rem) - 8usize];
};
pub type imaxdiv_t = _Lldiv_t;
unsafe extern "C" {
    pub fn imaxabs(_Number: intmax_t) -> intmax_t;
}
unsafe extern "C" {
    pub fn imaxdiv(_Numerator: intmax_t, _Denominator: intmax_t) -> imaxdiv_t;
}
unsafe extern "C" {
    pub fn strtoimax(
        _String: *const ::std::os::raw::c_char,
        _EndPtr: *mut *mut ::std::os::raw::c_char,
        _Radix: ::std::os::raw::c_int,
    ) -> intmax_t;
}
unsafe extern "C" {
    pub fn _strtoimax_l(
        _String: *const ::std::os::raw::c_char,
        _EndPtr: *mut *mut ::std::os::raw::c_char,
        _Radix: ::std::os::raw::c_int,
        _Locale: _locale_t,
    ) -> intmax_t;
}
unsafe extern "C" {
    pub fn strtoumax(
        _String: *const ::std::os::raw::c_char,
        _EndPtr: *mut *mut ::std::os::raw::c_char,
        _Radix: ::std::os::raw::c_int,
    ) -> uintmax_t;
}
unsafe extern "C" {
    pub fn _strtoumax_l(
        _String: *const ::std::os::raw::c_char,
        _EndPtr: *mut *mut ::std::os::raw::c_char,
        _Radix: ::std::os::raw::c_int,
        _Locale: _locale_t,
    ) -> uintmax_t;
}
unsafe extern "C" {
    pub fn wcstoimax(
        _String: *const wchar_t,
        _EndPtr: *mut *mut wchar_t,
        _Radix: ::std::os::raw::c_int,
    ) -> intmax_t;
}
unsafe extern "C" {
    pub fn _wcstoimax_l(
        _String: *const wchar_t,
        _EndPtr: *mut *mut wchar_t,
        _Radix: ::std::os::raw::c_int,
        _Locale: _locale_t,
    ) -> intmax_t;
}
unsafe extern "C" {
    pub fn wcstoumax(
        _String: *const wchar_t,
        _EndPtr: *mut *mut wchar_t,
        _Radix: ::std::os::raw::c_int,
    ) -> uintmax_t;
}
unsafe extern "C" {
    pub fn _wcstoumax_l(
        _String: *const wchar_t,
        _EndPtr: *mut *mut wchar_t,
        _Radix: ::std::os::raw::c_int,
        _Locale: _locale_t,
    ) -> uintmax_t;
}
pub const HANGUL_CHOSEONG_FILLER: _bindgen_ty_1 = 4447;
pub const HANGUL_JUNGSEONG_FILLER: _bindgen_ty_1 = 4448;
pub type _bindgen_ty_1 = ::std::os::raw::c_int;
pub type ucschar = u32;
unsafe extern "C" {
    pub fn hangul_is_choseong(c: ucschar) -> bool;
}
unsafe extern "C" {
    pub fn hangul_is_jungseong(c: ucschar) -> bool;
}
unsafe extern "C" {
    pub fn hangul_is_jongseong(c: ucschar) -> bool;
}
unsafe extern "C" {
    pub fn hangul_is_choseong_conjoinable(c: ucschar) -> bool;
}
unsafe extern "C" {
    pub fn hangul_is_jungseong_conjoinable(c: ucschar) -> bool;
}
unsafe extern "C" {
    pub fn hangul_is_jongseong_conjoinable(c: ucschar) -> bool;
}
unsafe extern "C" {
    pub fn hangul_is_jamo_conjoinable(c: ucschar) -> bool;
}
unsafe extern "C" {
    pub fn hangul_is_syllable(c: ucschar) -> bool;
}
unsafe extern "C" {
    pub fn hangul_is_jamo(c: ucschar) -> bool;
}
unsafe extern "C" {
    pub fn hangul_is_cjamo(c: ucschar) -> bool;
}
unsafe extern "C" {
    pub fn hangul_jamo_to_cjamo(ch: ucschar) -> ucschar;
}
unsafe extern "C" {
    pub fn hangul_syllable_iterator_prev(
        str_: *const ucschar,
        begin: *const ucschar,
    ) -> *const ucschar;
}
unsafe extern "C" {
    pub fn hangul_syllable_iterator_next(
        str_: *const ucschar,
        end: *const ucschar,
    ) -> *const ucschar;
}
unsafe extern "C" {
    pub fn hangul_syllable_len(
        str_: *const ucschar,
        max_len: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn hangul_jamo_to_syllable(
        choseong: ucschar,
        jungseong: ucschar,
        jongseong: ucschar,
    ) -> ucschar;
}
unsafe extern "C" {
    pub fn hangul_syllable_to_jamo(
        syllable: ucschar,
        choseong: *mut ucschar,
        jungseong: *mut ucschar,
        jongseong: *mut ucschar,
    );
}
unsafe extern "C" {
    pub fn hangul_jamos_to_syllables(
        dest: *mut ucschar,
        destlen: ::std::os::raw::c_int,
        src: *const ucschar,
        srclen: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _HangulKeyboard {
    _unused: [u8; 0],
}
pub type HangulKeyboard = _HangulKeyboard;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _HangulCombination {
    _unused: [u8; 0],
}
pub type HangulCombination = _HangulCombination;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _HangulBuffer {
    _unused: [u8; 0],
}
pub type HangulBuffer = _HangulBuffer;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _HangulInputContext {
    _unused: [u8; 0],
}
pub type HangulInputContext = _HangulInputContext;
pub const HANGUL_OUTPUT_SYLLABLE: _bindgen_ty_2 = 0;
pub const HANGUL_OUTPUT_JAMO: _bindgen_ty_2 = 1;
pub type _bindgen_ty_2 = ::std::os::raw::c_int;
pub const HANGUL_KEYBOARD_TYPE_JAMO: _bindgen_ty_3 = 0;
pub const HANGUL_KEYBOARD_TYPE_JASO: _bindgen_ty_3 = 1;
pub const HANGUL_KEYBOARD_TYPE_ROMAJA: _bindgen_ty_3 = 2;
pub const HANGUL_KEYBOARD_TYPE_JAMO_YET: _bindgen_ty_3 = 3;
pub const HANGUL_KEYBOARD_TYPE_JASO_YET: _bindgen_ty_3 = 4;
pub type _bindgen_ty_3 = ::std::os::raw::c_int;
pub const HANGUL_IC_OPTION_AUTO_REORDER: _bindgen_ty_4 = 0;
pub const HANGUL_IC_OPTION_COMBI_ON_DOUBLE_STROKE: _bindgen_ty_4 = 1;
pub const HANGUL_IC_OPTION_NON_CHOSEONG_COMBI: _bindgen_ty_4 = 2;
pub type _bindgen_ty_4 = ::std::os::raw::c_int;
unsafe extern "C" {
    pub fn hangul_keyboard_new() -> *mut HangulKeyboard;
}
unsafe extern "C" {
    pub fn hangul_keyboard_new_from_file(
        path: *const ::std::os::raw::c_char,
    ) -> *mut HangulKeyboard;
}
unsafe extern "C" {
    pub fn hangul_keyboard_delete(keyboard: *mut HangulKeyboard);
}
unsafe extern "C" {
    pub fn hangul_keyboard_set_type(keyboard: *mut HangulKeyboard, type_: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn hangul_keyboard_list_get_count() -> ::std::os::raw::c_uint;
}
unsafe extern "C" {
    pub fn hangul_keyboard_list_get_keyboard_id(
        index_: ::std::os::raw::c_uint,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn hangul_keyboard_list_get_keyboard_name(
        index_: ::std::os::raw::c_uint,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn hangul_keyboard_list_get_keyboard(
        id: *const ::std::os::raw::c_char,
    ) -> *const HangulKeyboard;
}
unsafe extern "C" {
    pub fn hangul_keyboard_list_register_keyboard(
        keyboard: *mut HangulKeyboard,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn hangul_keyboard_list_unregister_keyboard(
        id: *const ::std::os::raw::c_char,
    ) -> *mut HangulKeyboard;
}
unsafe extern "C" {
    pub fn hangul_combination_new() -> *mut HangulCombination;
}
unsafe extern "C" {
    pub fn hangul_combination_delete(combination: *mut HangulCombination);
}
unsafe extern "C" {
    pub fn hangul_combination_set_data(
        combination: *mut HangulCombination,
        first: *mut ucschar,
        second: *mut ucschar,
        result: *mut ucschar,
        n: ::std::os::raw::c_uint,
    ) -> bool;
}
unsafe extern "C" {
    pub fn hangul_ic_new(keyboard: *const ::std::os::raw::c_char) -> *mut HangulInputContext;
}
unsafe extern "C" {
    pub fn hangul_ic_delete(hic: *mut HangulInputContext);
}
unsafe extern "C" {
    pub fn hangul_ic_process(hic: *mut HangulInputContext, ascii: ::std::os::raw::c_int) -> bool;
}
unsafe extern "C" {
    pub fn hangul_ic_reset(hic: *mut HangulInputContext);
}
unsafe extern "C" {
    pub fn hangul_ic_backspace(hic: *mut HangulInputContext) -> bool;
}
unsafe extern "C" {
    pub fn hangul_ic_is_empty(hic: *mut HangulInputContext) -> bool;
}
unsafe extern "C" {
    pub fn hangul_ic_has_choseong(hic: *mut HangulInputContext) -> bool;
}
unsafe extern "C" {
    pub fn hangul_ic_has_jungseong(hic: *mut HangulInputContext) -> bool;
}
unsafe extern "C" {
    pub fn hangul_ic_has_jongseong(hic: *mut HangulInputContext) -> bool;
}
unsafe extern "C" {
    pub fn hangul_ic_is_transliteration(hic: *mut HangulInputContext) -> bool;
}
unsafe extern "C" {
    pub fn hangul_ic_get_option(
        hic: *mut HangulInputContext,
        option: ::std::os::raw::c_int,
    ) -> bool;
}
unsafe extern "C" {
    pub fn hangul_ic_set_option(
        hic: *mut HangulInputContext,
        option: ::std::os::raw::c_int,
        value: bool,
    );
}
unsafe extern "C" {
    pub fn hangul_ic_set_output_mode(hic: *mut HangulInputContext, mode: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn hangul_ic_set_keyboard(hic: *mut HangulInputContext, keyboard: *const HangulKeyboard);
}
unsafe extern "C" {
    pub fn hangul_ic_switch_keyboard_table(
        hic: *mut HangulInputContext,
        tableid: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn hangul_ic_select_keyboard(
        hic: *mut HangulInputContext,
        id: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn hangul_ic_connect_callback(
        hic: *mut HangulInputContext,
        event: *const ::std::os::raw::c_char,
        callback: *mut ::std::os::raw::c_void,
        user_data: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn hangul_ic_get_preedit_string(hic: *mut HangulInputContext) -> *const ucschar;
}
unsafe extern "C" {
    pub fn hangul_ic_get_commit_string(hic: *mut HangulInputContext) -> *const ucschar;
}
unsafe extern "C" {
    pub fn hangul_ic_flush(hic: *mut HangulInputContext) -> *const ucschar;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Hanja {
    _unused: [u8; 0],
}
pub type Hanja = _Hanja;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _HanjaList {
    _unused: [u8; 0],
}
pub type HanjaList = _HanjaList;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _HanjaTable {
    _unused: [u8; 0],
}
pub type HanjaTable = _HanjaTable;
unsafe extern "C" {
    pub fn hanja_table_load(filename: *const ::std::os::raw::c_char) -> *mut HanjaTable;
}
unsafe extern "C" {
    pub fn hanja_table_match_exact(
        table: *const HanjaTable,
        key: *const ::std::os::raw::c_char,
    ) -> *mut HanjaList;
}
